fixed wrap in admin messages

--- a/style.css
+++ b/style.css
@@ -115,6 +115,7 @@ img {
 }
 
 .message {
+    word-wrap: break-word;
     background-color: #f9f9f9;
     padding: 15px;
     margin-bottom: 10px;
